socials styling plus changed color

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
                 <div class="links">
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
