--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
+                        <i class="fa-solid fa-code"></i>
                         <div class="text">Web Development</div>
                         <p>Design, build and maintain websites ensuring that sites meet user expections by ensuring they look good, run smoothly and offer easy access points.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fa-solid fa-photo-film"></i>
                         <div class="text">Photo/Video editing</div>
                         <p>I edit Photo and Video visuals using different technologies and techniques to make them more appealing.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fa-regular fa-folder-open"></i>
                         <div class="text">Admin Assistant</div>
                         <p>Assist with the day-to-day operations of an organization by doing tasks such as filing paperwork, answering phone calls, preparing documents for meetings, and managing the calendar of their supervisors.</p>
                     </div>
