project card links to live demo and github repo

--- a/index.html
+++ b/index.html
@@ -173,37 +173,43 @@
             <div class="slider owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="./images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="./images/heoney-shop.png" alt="honey shop demo screenshot" >
+                        <div class="text">Honey Shop</div>
+                        <a href="https://sandile05.github.io/honey-shop/" target="_blank">Open Demo</a> 
+                        <a href="https://github.com/sandile05/honey-shop" target="_blank">View Code</a>
+
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Project</div>
+                        <a href="#">Open Demo</a> 
+                        <a href="#">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Project</div>
+                        <a href="#">Open Demo</a> 
+                        <a href="#">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Project</div>
+                        <a href="#">Open Demo</a> 
+                        <a href="#">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="./images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Project</div>
+                        <a href="#">Open Demo</a> 
+                        <a href="#">View Code</a>
                     </div>
                 </div>
             </div>
