updated project card styling

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="box">
                         <img src="./images/profile-1.jpeg" alt="">
                         <div class="text">Project</div>
-                        <a href="#">Open Demo</a> 
+                        <a href="#">Demo</a> 
                         <a href="#">View Code</a>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                     <div class="box">
                         <img src="./images/profile-3.jpeg" alt="">
                         <div class="text">Project</div>
-                        <a href="#">Open Demo</a> 
+                        <a href="#">Demo</a> 
                         <a href="#">View Code</a>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                     <div class="box">
                         <img src="./images/profile-4.jpeg" alt="">
                         <div class="text">Project</div>
-                        <a href="#">Open Demo</a> 
+                        <a href="#">Demo</a> 
                         <a href="#">View Code</a>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                     <div class="box">
                         <img src="./images/profile-5.jpeg" alt="">
                         <div class="text">Project</div>
-                        <a href="#">Open Demo</a> 
+                        <a href="#">Demo</a> 
                         <a href="#">View Code</a>
                     </div>
                 </div>
