--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
                 <div class="links">
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/sandile05"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
