--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="#contact">Hire me</a>
                 <div class="links">
                     <a href="https://github.com/sandile05"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#https://twitter.com/dev_Sandile"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
