updated skills section

--- a/index.html
+++ b/index.html
@@ -108,45 +108,45 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>As a self taught developer, I have spent countless hours learning through YouTube tutorials and online courses such as freeCodeCamp and The Odin Project. I am familiar with the development and deployment process for various web-based technologies. I am eager to tackle web development/design challenges to achieve lasting impacts on user experience</p>
+                    <p>As a self taught developer, I have spent countless hours learning through YouTube tutorials and online courses such as freeCodeCamp and The Odin Project. I am familiar with the development and deployment process for various web-based technologies. I am eager to tackle web development/design challenges to achieve lasting impacts on user experience.</p>
                     <a href="#contact">Hire me</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>85%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>65%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>40%</span>
+                            <span>55%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Git version control</span>
-                            <span>55%</span>
+                            <span>65%</span>
                         </div>
                         <div class="line git"></div>
                     </div>
-                    <div class="bars">
+                    <!-- <div class="bars">
                         <div class="info">
                             <span>WordPress</span>
                             <span>30%</span>
                         </div>
                         <div class="line word-press"></div>
-                    </div>
+                    </div> -->
                     <div class="bars">
                         <div class="info">
                             <span>Microsoft Office</span>
@@ -154,13 +154,13 @@
                         </div>
                         <div class="line ms"></div>
                     </div>
-                    <div class="bars">
+                    <!-- <div class="bars">
                         <div class="info">
                             <span>Photoshop</span>
                             <span>60%</span>
                         </div>
                         <div class="line photoshop"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
