coming soon image added for empty project card

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
                 <div class="links">
-                    <a href="https://github.com/sandile05"><i class="fa-brands fa-github"></i></a>
-                    <a href="#https://twitter.com/dev_Sandile"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://twitter.com/dev_Sandile" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./images/profile-1.jpeg" alt="">
+                        <img src="https://images.pexels.com/photos/4439444/pexels-photo-4439444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                         <div class="text">Project</div>
                         <a href="#">Demo</a> 
                         <a href="#">View Code</a>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./images/profile-3.jpeg" alt="">
+                        <img src="https://images.pexels.com/photos/4439444/pexels-photo-4439444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                         <div class="text">Project</div>
                         <a href="#">Demo</a> 
                         <a href="#">View Code</a>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./images/profile-4.jpeg" alt="">
+                        <img src="https://images.pexels.com/photos/4439444/pexels-photo-4439444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                         <div class="text">Project</div>
                         <a href="#">Demo</a> 
                         <a href="#">View Code</a>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./images/profile-5.jpeg" alt="">
+                        <img src="https://images.pexels.com/photos/4439444/pexels-photo-4439444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                         <div class="text">Project</div>
                         <a href="#">Demo</a> 
                         <a href="#">View Code</a>
